--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	  <input type="submit" value="Zaloguj">
    </form>
    <div>
-    <a href="login.html">Zarejestruj się</a>
-    <a href="login.html">Zapomniałeś hasła?</a>
+    <a href="index.html">Zarejestruj się</a>
+    <a href="index.html">Zapomniałeś hasła?</a>
    </div>
 
 
